# WorldAutoVC_GUI

./: .gitignore  README.md  pyproject.toml
src/: app.py  model.py  realtime_vc.py  util.py
